examples/test/testpolicy16393.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16393
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key37: value38
      key16: value30
      key28: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value29
      podSelector:
        matchLabels:
          key6: value29
